--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
-    "start-dev": "nodemon ./site.js"
+    "start-dev": "nodemon ./app.js"
   },
   "author": "",
   "license": "ISC",
